# LetsDoGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md  main.cpp
.cache/clangd/index/: main.cpp.61C742DA6B2445F5.idx
Debug/: OpenGL.exe.recipe  OpenGL.ilk  OpenGL.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/: README.md
OpenGL/Debug/: OpenGL.vcxproj.FileListAbsolute.md
display/: display.cpp  display.h
mesh/: mesh.cpp  mesh.h
res/Shaders/: BasicShader.frag  BasicShader.vert
shader/: shader.cpp  shader.h
texture/: texture.cpp  texture.h
